# instahouse-private

./: AGENTS.md  Cargo.toml  KnowledgeBase.md  README.md  TODO.md  fnox.toml  lefthook.yml  mise.toml
cue/: approach.cue  main.cue  rand.cue
src/: checkers.rs  errors.rs  lib.rs  models.rs  tools.rs  traits.rs  types.rs
src/checkers/: is_numeric.rs
src/errors/: indexed.rs  line_intersection_error.rs  passport_validation_error.rs  person_validation_error.rs  state_validation_error.rs
src/errors/passport_validation_error/: issued_on_not_in_the_past_error.rs
src/errors/person_validation_error/: person_has_no_passport_error.rs
src/models/: asset_name.rs  bank.rs  country.rs  issued_on.rs  lat_lon.rs  natural_conversation.rs  natural_message.rs  passport.rs  person.rs  person_action.rs  state.rs  view.rs
src/models/bank/: types.rs
src/models/bank/types/: credentials.rs  deposit_error.rs  login.rs  password.rs  transfer_error.rs
src/models/natural_message/: natural_message_role.rs
src/tools/: report.rs  seed.rs
src/traits/: infinite_iterator.rs  validate.rs
src/types/: asset_name.rs  bank.rs  location.rs  passport.rs  passport_number.rs  person.rs  polygon.rs  property.rs  state.rs  thailand_land_department.rs
src/types/bank/: types.rs
src/types/bank/types/: account.rs  amount.rs  credentials.rs  signup_error.rs  user.rs  withdraw_error.rs
src/types/person_action/: generate_credentials_action.rs
